# PraticeDataStructureAndAlgorithmAndCtCI

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Logger.sln  README.md  Rebuild.bat
Algorithms/: CMakeLists.txt  Sort.hpp
Algortihms.Testing/: CMakeLists.txt
Common/: WindowsDllDefinition.hpp
CrackingTheCodingInterviewExercises/: CMakeLists.txt
DataStructures/: ArrayList.cpp  ArrayList.hpp  CMakeLists.txt
DataStructures.Testing/: CMakeLists.txt  DataStructuresTesting.cpp  TestArrayList.hpp
Logger/: Logger.cpp  Logger.h  Logger.vcxproj  Logger.vcxproj.filters  LoggerCommon.h  Source.cpp  scLog.cpp  scLog.h
logResp/projectDocuments/SettingFiles/VS_CMake_project/: launch.vs.json
logResp/src/Logger/: CMakeLists.txt  DateTime.h
logResp/src/Logger.Testing/: CMakeLists.txt  main.cpp
logResp/src/Logger_dotNet/: Logger_dotNet.csproj
projectDocuments/SettingFiles/: Logger_dotNet.sln
projectDocuments/SettingFiles/VS_CMake_project/: VSWorkspaceState.json
src/Algorithms/: Sort.cpp
src/Algorithms.Testing/: CMakeLists.txt
src/Common/: AssertClass.hpp  CommonFunction.hpp  TestClassBase.hpp  TimeCounter.hpp
src/CrackingTheCodingInterviewExercises/: CMakeLists.txt  Ch1_1_IsUnique.hpp  Ch1_2_CheckPermutation.hpp  Ch1_3_URLify.hpp  Ch1_4_PalindromePermutation.hpp  main.cpp
src/DataStructures/: ArrayList.cpp  ArrayList.hpp  LinkList.hpp  StringBuilder.hpp
src/DataStructures.Testing/: CMakeLists.txt  DataStructuresTesting.cpp  TestArrayList.hpp  TestLinkList.hpp  TestStringBuilder.hpp
src/Logger/: CMakeLists.txt  LogArgs.h  Logger.cpp  Logger.h  LoggerCommon.h
src/Logger.Testing/: CMakeLists.txt
src/Logger_dotNet/: Class1.cs
src/Logger_dotNet.Testing/: Logger_dotNet.Testing.csproj
src/Logger_dotNet.Testing/Properties/: AssemblyInfo.cs
src/logResp/: CMakeLists.txt  Rebuild.bat
src/logResp/src/Logger/: CMakeLists.txt  LogArgs.h  Logger.cpp
src/logResp/src/Logger.Testing/: CMakeLists.txt  main.cpp
src/logResp/src/Logger_dotNet.Testing/: Program.cs
src/logResp/src/Logger_dotNet/Properties/: AssemblyInfo.cs
