cmake_minimum_required(VERSION 3.10.0)
set(PROJECT_NAME LoggerProject)
project(${PROJECT_NAME})

# if(MSVC)
# 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17")
# else()
# 	set(CMAKE_CXX_FLAGS "-std=c++17${CMAKE_CXX_FLAGS}")
# endif(MSVC)
set(CMAKE_CXX_FLAGS "-std=c++17${CMAKE_CXX_FLAGS}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(src/Logger)
add_subdirectory(src/Logger.Testing)

set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_VERBOSE_MAKEFILE ON)
if(MSVC)
	set(CMAKE_CXX_COMPILER "mvc")
else()
	message(STATUS "Using gcc")
	set(CMAKE_CXX_COMPILER "gcc")
endif(MSVC)
